--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   ],
   "engines": {
     "node": ">=8.0.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
